--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             <div class="col-12">
                 <div class="card glass slide-up">
                     <div class="card-body">
-                        <h3 class="text-center mb-4">
+                        <h3 class="text-center mb-4 section-title">
                             <i class="fas fa-chart-bar text-success"></i>
                             Platform Statistics
                         </h3>
@@ -95,7 +95,7 @@
             <div class="col-12">
                 <div class="card glass slide-up">
                     <div class="card-body">
-                        <h3 class="text-center mb-4">
+                        <h3 class="text-center mb-4 section-title">
                             <i class="fas fa-chart-line text-primary"></i>
                             Your Activity Overview
                         </h3>
